
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int dwSize; int th32ProcessID; int szExeFile; } ;
typedef TYPE_1__ PROCESSENTRY32 ;
typedef scalar_t__ HANDLE ;
typedef int DWORD ;


 int CloseHandle (scalar_t__) ;
 scalar_t__ CreateToolhelp32Snapshot (int ,int ) ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int Process32First (scalar_t__,TYPE_1__*) ;
 scalar_t__ Process32Next (scalar_t__,TYPE_1__*) ;
 int TH32CS_SNAPPROCESS ;
 int lstrcmp (int ,char*) ;
 int printf (char*) ;

DWORD GetWinlogonPID()
{
 DWORD WinlogonPid = 0;
 PROCESSENTRY32 ProcessEntry;
 ProcessEntry.dwSize = sizeof(PROCESSENTRY32);

 HANDLE hSnapshot = CreateToolhelp32Snapshot(TH32CS_SNAPPROCESS, 0);
 if (hSnapshot == INVALID_HANDLE_VALUE)
 {
  printf("[-] CreateToolhelp32Snapshot failed !\n");
  goto ret;
 }

 if (!Process32First(hSnapshot, &ProcessEntry))
 {
  printf("[-] Process32First failed !\n");
  goto cleanup;
 }

 do
 {
  if (!lstrcmp(ProcessEntry.szExeFile, "winlogon.exe"))
  {
   WinlogonPid = ProcessEntry.th32ProcessID;
   break;
  }
 } while (Process32Next(hSnapshot, &ProcessEntry));

cleanup:
 CloseHandle(hSnapshot);
ret:
 return WinlogonPid;
}
