; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_43987.c_GetWinlogonPID.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_43987.c_GetWinlogonPID.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }

@TH32CS_SNAPPROCESS = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [39 x i8] c"[-] CreateToolhelp32Snapshot failed !\0A\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"[-] Process32First failed !\0A\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"winlogon.exe\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetWinlogonPID() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__, align 4
  %3 = alloca i64, align 8
  store i32 0, i32* %1, align 4
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 12, i32* %4, align 4
  %5 = load i32, i32* @TH32CS_SNAPPROCESS, align 4
  %6 = call i64 @CreateToolhelp32Snapshot(i32 %5, i32 0)
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = call i32 @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  br label %36

12:                                               ; preds = %0
  %13 = load i64, i64* %3, align 8
  %14 = call i32 @Process32First(i64 %13, %struct.TYPE_4__* %2)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %12
  %17 = call i32 @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  br label %33

18:                                               ; preds = %12
  br label %19

19:                                               ; preds = %28, %18
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @lstrcmp(i32 %21, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %19
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %1, align 4
  br label %32

27:                                               ; preds = %19
  br label %28

28:                                               ; preds = %27
  %29 = load i64, i64* %3, align 8
  %30 = call i64 @Process32Next(i64 %29, %struct.TYPE_4__* %2)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %19, label %32

32:                                               ; preds = %28, %24
  br label %33

33:                                               ; preds = %32, %16
  %34 = load i64, i64* %3, align 8
  %35 = call i32 @CloseHandle(i64 %34)
  br label %36

36:                                               ; preds = %33, %10
  %37 = load i32, i32* %1, align 4
  ret i32 %37
}

declare dso_local i64 @CreateToolhelp32Snapshot(i32, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @Process32First(i64, %struct.TYPE_4__*) #1

declare dso_local i32 @lstrcmp(i32, i8*) #1

declare dso_local i64 @Process32Next(i64, %struct.TYPE_4__*) #1

declare dso_local i32 @CloseHandle(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
